kubernetes/client_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: ssgaikwad/emartclient
        ports:
          - containerPort: 4200
            name: client-port
