kubernetes/nginx_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: ssgaikwad/emartnginx
        ports:
          - containerPort: 80
            name: nginx-port
