kubernetes/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
    - port: 5000
      targetPort: api-port
      protocol: TCP
  type: ClusterIP
