kubernetes/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: nginx-port
      protocol: TCP
  type: ClusterIP
